--- a/src/app/user/user.html
+++ b/src/app/user/user.html
@@ -1,6 +1,6 @@
 <div>
   <button>
-    <img [src]="userImage" [alt]="name" />
-    <span>{{ name }}</span>
+    <img [src]="userImage()" [alt]="name()" />
+    <span>{{ name() }}</span>
   </button>
 </div>
