--- a/src/app/user/user.html
+++ b/src/app/user/user.html
@@ -1,6 +1,6 @@
 <div>
   <button (click)="selecedtUser()">
-    <img [src]="userImage" [alt]="name" />
-    <span>{{ name }}</span>
+    <img [src]="userImage" [alt]="user.name" />
+    <span>{{ user.name }}</span>
   </button>
 </div>
