--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,21 +2,11 @@
 
 <main>
   <ul id="users">
+    @for(user of users;track user.id){
     <li>
-      <app-user [user]="users[0]" (selectUser)="onSelectUser($event)" />
+      <app-user [user]="user" (selectUser)="onSelectUser($event)" />
     </li>
-    <li>
-      <app-user [user]="users[1]" (selectUser)="onSelectUser($event)" />
-    </li>
-    <li>
-      <app-user [user]="users[2]" (selectUser)="onSelectUser($event)" />
-    </li>
-    <li>
-      <app-user [user]="users[3]" (selectUser)="onSelectUser($event)" />
-    </li>
-    <li>
-      <app-user [user]="users[4]" (selectUser)="onSelectUser($event)" />
-    </li>
+    }
   </ul>
   <app-tasks [name]="selectedUser?.name"></app-tasks>
 </main>
