@if and @else conditions uasge

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,5 +8,9 @@
     </li>
     }
   </ul>
-  <app-tasks [name]="selectedUser?.name"></app-tasks>
+  @if(selectedUser){
+  <app-tasks [name]="selectedUser.name"></app-tasks>
+  } @else {
+  <h2>Select a user to see details</h2>
+  }
 </main>
