--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,15 +2,21 @@
 
 <main>
   <ul id="users">
-    @for(user of users;track user.id){
+    <!-- @for(user of users;track user.id){
     <li>
       <app-user [user]="user" (selectUser)="onSelectUser($event)" />
     </li>
-    }
+    } -->
+    <li *ngFor="let user of users">
+      <app-user [user]="user" (selectUser)="onSelectUser($event)" />
+    </li>
   </ul>
-  @if(selectedUser){
-  <app-tasks [name]="selectedUser.name"></app-tasks>
-  } @else {
-  <h2>Select a user to see details</h2>
-  }
+
+  <app-tasks
+    *ngIf="selectedUser; else fallback"
+    [name]="selectedUser!.name"
+  ></app-tasks>
+  <ng-template #fallback>
+    <h2>Select a user to see details</h2>
+  </ng-template>
 </main>
