--- a/src/app/tasks/tasks.html
+++ b/src/app/tasks/tasks.html
@@ -1,1 +1,22 @@
-<p>{{ name }}</p>
+<section id="tasks">
+  <header>
+    <h2>{{ name }}'s Tasks</h2>
+    <menu>
+      <button (click)="addTask()">Add Task</button>
+    </menu>
+  </header>
+  <ul>
+    @for(task of userSpecificTask;track task.id){
+    <li>
+      <app-task [task]="task"></app-task>
+    </li>
+    }
+  </ul>
+
+  @if(clicked){
+  <app-new-task
+    (close)="onCloseTask()"
+    [userid]="userID"
+  ></app-new-task>
+  }
+</section>
